--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+							<h1 id="logo"><a href="index.html">Nikki Rider</a></h1>
+							<p>Data Enthusiast. Computational Astrophysicist. Educator.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
