--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Nikki Rider</a></h1>
-							<p>HPC Enthusiast. Computational Astrophysicist. Educator.</p>
+							<p>Data Enthusiast. Computational Astrophysicist. Educator.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
