--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <html lang="en">
 <head>
-  <title>John Doe</title>
+  <title>Nikki Rider</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -65,12 +65,12 @@
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
-                <p><b>john at doe.com</b><br>
-                <p>Random Department<br>
-                University of Randomness<br>
-                Street<br>
-                City <br>
-                Country<br>
+                <p><b>nrider at unc.edu</b><br>
+                <p>Physics and Astronomy Department<br>
+                University of North Carolina<br>
+                <! Street<br>
+                <! City <br>
+                <! Country<br>
                 </p>
             </div>
             
