added name to sidebar

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Nikki Rider</b></div><br>
                 <p><b>nrider at unc.edu</b><br>
                 <p>Physics and Astronomy Department<br>
                 University of North Carolina<br>
