--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav">
 				  <li><a href="index.html">Home</a></li>
-				  <li><a href="#">Projects</a></li>
-				  <li><a href="#publications">Publications</a></li> 
+				  <li><a href="#">Research Projects</a></li>
+                                  <li><a href="#">Cloud HPC</a></li>
+                                  <li><a href="#publications">Teaching</a></li>
+                                  <li><a href="#">Pottery</a></li>
 				  <li><a href="#">CV</a></li> 
 		  </ul>
 		</div>
