--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-                <img {width: 30%; height: auto;} class="img-responsive" src="nikkiBlueRidge.jpg" alt=""><br>
+                <img {width: 30%; height: auto;} class="img-responsive" src="photo.gif" alt=""><br>
                 
                 <div style="margin-top:3%; text-align:justify;">                
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing <a href="#">elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
