--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="nikkiBlueRidge.jpg" style="width: 450px; height: auto;" alt=""><br>
+                <img class="img-responsive" src="nikkiBRwide.jpg" style="width: 900px; height: auto;" alt=""><br>
                 
                 <div style="margin-top:3%; text-align:justify;">                
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing <a href="#">elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
