add first HW link

--- a/teaching.html
+++ b/teaching.html
@@ -52,7 +52,7 @@
             <!-- Entries Column -->
             <div class="col-md-8" style="height: 100vh;">
                 <h2 id="publications">Publications</h2>
-                 <strong>Peer-reviewed</strong><br/>
+                 <strong><a href=hw_notes_phys332/01\ -\ fixed\ step\ ODE/>HW01</a></strong><br/>
                  <ul>
                  <li class="paper" words="add, your, keywords, here"><a href="#">Full title</a> Names of the authors</li>
                  </ul>                
