add first HW link

--- a/teaching.html
+++ b/teaching.html
@@ -52,9 +52,9 @@
             <!-- Entries Column -->
             <div class="col-md-8" style="height: 100vh;">
                 <h2 id="publications">Publications</h2>
-                 <strong><a href=hw_notes_phys332/01\ -\ fixed\ step\ ODE/>HW01</a></strong><br/>
+                 <strong>HW01</strong><br/>
                  <ul>
-                 <li class="paper" words="add, your, keywords, here"><a href="#">Full title</a> Names of the authors</li>
+                 <li class="paper" words="add, your, keywords, here"><a href="href=hw_notes_phys332/01\ -\ fixed\ step\ ODE/Jupiter\ Notebooks\ Vs\ Modular\ Python\ programming.pdf">Jupiter Notebooks Vs Modular Python programming </a> Names of the authors</li>
                  </ul>                
              
             <div style="margin-top:3%; text-align:justify;">                
