--- a/teaching.html
+++ b/teaching.html
@@ -51,7 +51,7 @@
 
             <!-- Entries Column -->
             <div class="col-md-8" style="height: 100vh;">
-                <h2 id="publications">Publications</h2>
+                <h2 id="phys332">Physics 332 - Numerical Techiniques II</h2>
                  <strong>HW01</strong><br/>
                  <ul>
                  <li class="paper" words="add, your, keywords, here"><a href="href=hw_notes_phys332/01\ -\ fixed\ step\ ODE/Jupiter\ Notebooks\ Vs\ Modular\ Python\ programming.pdf">Jupiter Notebooks Vs Modular Python programming </a> Names of the authors</li>
