--- a/teaching.html
+++ b/teaching.html
@@ -54,7 +54,7 @@
                 <h2 id="phys332">Physics 332 - Numerical Techiniques II</h2>
                  <strong>HW01</strong><br/>
                  <ul>
-                 <li class="paper" words="add, your, keywords, here"><a href="href=hw_notes_phys332/01\ -\ fixed\ step\ ODE/Jupiter\ Notebooks\ Vs\ Modular\ Python\ programming.pdf">Jupiter Notebooks Vs Modular Python programming </a> Names of the authors</li>
+                 <li class="paper" words="add, your, keywords, here"><a href="hw_notes_phys332/01_fixed_step_ODE/jup_vs_modular.pdf">Jupiter Notebooks Vs Modular Python programming </a> Names of the authors</li>
                  </ul>                
              
             <div style="margin-top:3%; text-align:justify;">                
