--- a/teaching.html
+++ b/teaching.html
@@ -51,7 +51,8 @@
 
             <!-- Entries Column -->
             <div class="col-md-8" style="height: 100vh;">
-                <h2 id="phys332">Physics 332 - Numerical Techiniques II</h2>
+                <h3> Homework Notest </h3>
+                <h4 id="phys332">Physics 332 - Numerical Techniques II</h4>
                  <strong>HW01</strong><br/>
                  <ul>
                  <li class="paper" words="add, your, keywords, here"><a href="hw_notes_phys332/01_fixed_step_ODE/jup_vs_modular.pdf">Jupiter Notebooks Vs Modular Python programming </a> Names of the authors</li>
