--- a/teaching.html
+++ b/teaching.html
@@ -51,8 +51,9 @@
 
             <!-- Entries Column -->
             <div class="col-md-8" style="height: 100vh;">
-                <h3>Numerical Techniques II </h3>
-                <h4>physics 332 - homework notes</h4>
+                <h3>Teaching</h3>
+                <h4>Numerical Techniques II (PHYS332) </h4>
+                <h5>homework notes:</h5>
                  <strong>HW01</strong><br/>
                  <ul>
                  <li class="paper" words="add, your, keywords, here"><a href="hw_notes_phys332/01_fixed_step_ODE/jup_vs_modular.pdf">Jupiter Notebooks Vs Modular Python programming </a> Names of the authors</li>
