--- a/teaching.html
+++ b/teaching.html
@@ -51,12 +51,12 @@
 
             <!-- Entries Column -->
             <div class="col-md-8" style="height: 100vh;">
-                <h3>Teaching</h3>
-                <h4>Numerical Techniques II (PHYS332) </h4>
-                <h5>homework notes:</h5>
+                <h2>Teaching</h2>
+                <h3>Numerical Techniques II (PHYS332) </h3>
+                <h4>Homework Notes:</h4>
                  <strong>HW01</strong><br/>
                  <ul>
-                 <li class="paper" words="add, your, keywords, here"><a href="hw_notes_phys332/01_fixed_step_ODE/jup_vs_modular.pdf">Jupiter Notebooks Vs Modular Python programming </a> Names of the authors</li>
+                 <li class="paper" words="add, your, keywords, here"><a href="hw_notes_phys332/01_fixed_step_ODE/jup_vs_modular.pdf">Jupiter Notebooks Vs Modular Python programming </a> </li>
                  </ul>                
              
             <div style="margin-top:3%; text-align:justify;">                
