--- a/teaching.html
+++ b/teaching.html
@@ -51,9 +51,16 @@
 
             <!-- Entries Column -->
             <div class="col-md-8" style="height: 100vh;">
-                <h2>Teaching</h2>
-                <h3>Numerical Techniques II (PHYS332) </h3>
-                <h4>Homework Notes:</h4>
+                 <h2>Teaching</h2>
+                 <h3>Numerical Techniques II (PHYS332) </h3>
+                 <div style="margin-top:3%; text-align:justify;">                
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing <a href="#">elit</a>, sed do eiusmod tempor incididunt ut labore et</p>                                                 
+                            <p>Ut eommodo consequat. Duis aute irure dolor in r    eprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                         
+                 </div>
+
+
+                 <h4>Homework Notes:</h4>
                  <strong>HW01</strong><br/>
                  <ul>
                  <li class="paper" words="add, your, keywords, here"><a href="hw_notes_phys332/01_fixed_step_ODE/jup_vs_modular.pdf">Jupiter Notebooks Vs Modular Python programming </a> </li>
