--- a/teaching.html
+++ b/teaching.html
@@ -54,9 +54,7 @@
                  <h2>Teaching</h2>
                  <h3>Numerical Techniques II (PHYS332) </h3>
                  <div style="margin-top:3%; text-align:justify;">                
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing <a href="#">elit</a>, sed do eiusmod tempor incididunt ut labore et</p>                                                 
-                            <p>Ut eommodo consequat. Duis aute irure dolor in r    eprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                         
+                 <p> Here are my lecture notes for the homework assignments in Numerical Techniques II (PHYS 332) at UNC Chapel Hill. I was the teaching assistant for Professor Fabian Heitsch in this course for five years and really enjoyed the experience and working with the students. Teaching this material taught me a lot, and past students have spoken very positively about my notes. I'm sharing them here in case they may be useful to others. If you have any questions or comments, please feel free to reach out to me via email.</p>                        
                  </div>
 
 
