--- a/teaching.html
+++ b/teaching.html
@@ -62,7 +62,9 @@
                  <strong>HW01</strong><br/>
                  <ul>
                  <li><a href="hw_notes_phys332/01_fixed_step_ODE/jup_vs_modular.pdf">Jupiter Notebooks Vs Modular Python Programming </a> </li>
-                 <li><a href="hw_notes_phys332/01_fixed_step_ODE/getting_started_hw01_stepfunc.pdf">Getting Started /& Step Function Review </a> </li>
+                 <li><a href="hw_notes_phys332/01_fixed_step_ODE/getting_started_hw01_stepfunc.pdf">Getting Started & Step Function Review </a> </li>
+                 <li><a href="hw_notes_phys332/01_fixed_step_ODE/setting_up_ODE_probs.pdf">Setting Up ODE Problems</a> </li>
+                 <li><a href="hw_notes_phys332/01_fixed_step_ODE/coding_example_kepler.pdf">Kepler Coding Example</    a> </li>
                  </ul>                
              
            </div> 
