--- a/teaching.html
+++ b/teaching.html
@@ -64,7 +64,13 @@
                       <li><a href="hw_notes_phys332/01_fixed_step_ODE/jup_vs_modular.pdf">Jupiter Notebooks Vs Modular Python Programming </a> </li>
                       <li><a href="hw_notes_phys332/01_fixed_step_ODE/getting_started_hw01_stepfunc.pdf">Getting Started & Step Function Review </a> </li>
                       <li><a href="hw_notes_phys332/01_fixed_step_ODE/setting_up_ODE_probs.pdf">Setting Up ODE Problems</a> </li>
-                      <li><a href="hw_notes_phys332/01_fixed_step_ODE/coding_example_kepler.pdf">Kepler Coding Example</    a> </li>
+                      <li><a href="hw_notes_phys332/01_fixed_step_ODE/coding_example_kepler.pdf">Kepler Coding Example</a> </li>
+                 </ul>
+                 <strong>HW02</strong><br/>
+                 <ul>
+                     <li><a href="hw_notes_phys332/02_BVP_root_finder/laplace_transform.pdf">Laplace Transform</a></li>
+                     <li><a href="hw_notes_phys332/02_BVP_root_finder/sturm_louisville.pdf">Sturm-Liouville Theory</a></li>
+                     <li><a href="hw_notes_phys332/02_BVP_root_finder/root_finding.pdf">Root Finding Methods</a></li>
                  </ul>            
                  <strong>HW03</strong><br/>
                  <ul>
